snoot alert added, title updated
if the foxes nose is clicked an alert pops up to the user, title changed

--- a/style.css
+++ b/style.css
@@ -48,6 +48,19 @@
 
  .content, p {
      width: 620px;
-     height: 400px;
+     height: 300px;
      color:rgb(69, 100, 139);
  }
+
+ #button {
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+  color: transparent;
+  position: relative;
+  left: 690px;
+}
+
