--- a/style.css
+++ b/style.css
@@ -8,10 +8,16 @@
 }
 
   html {
+    height: 100%;
+    width: 100%;
     /* background image */
     background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80) no-repeat center center fixed; 
     /* background covers the whole site */
     background-size: cover;
+  }
+  body {
+    height: 100%;
+    width: 100%;
   }
 
   li {
@@ -61,6 +67,6 @@
   outline:none;
   color: transparent;
   position: relative;
-  left: 690px;
+  left: 47.5%;
 }
 
