--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@
 }
 
   html {
-    height: 100%;
-    width: 100%;
     /* background image */
     background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80) no-repeat center center fixed; 
     /* background covers the whole site */
     background-size: cover;
+    height: 100%;
+    width: 100%;
   }
   body {
     height: 100%;
@@ -52,6 +52,11 @@
     color:rgb(69, 100, 139);
   }
 
+  .content {
+    height: 100%;
+    width: 100%;
+  }
+
  .content, p {
      width: 620px;
      height: 300px;
@@ -66,7 +71,8 @@
   overflow: hidden;
   outline:none;
   color: transparent;
-  position: relative;
-  left: 47.5%;
+  position: fixed;
+  left: 48%;
+  top: 72%;
 }
 
