--- a/style.css
+++ b/style.css
@@ -1,87 +1,70 @@
-
-.header {
-  /* text color specified */
-    color:rgb(104, 149, 207);
-    /* font family specified */
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    /* with the relative position the header will always */
-    position: relative;
-    /* positioned down 100px from the top */
-    margin-top: 100px;
-    /* with the relative position the header will always stay 100px from the top,
-    regardless of screen resolution */
-    position: relative;
-    /* positioned 23px from left */
-    left: 23px;
+html {
+  background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80)
+    no-repeat center center fixed;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-  html {
-    /* background image */
-    background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80) no-repeat center center fixed; 
-    /* background covers the whole site */
-    background-size: cover;
-     /* width and height specified in order to preserve the images resolution */
-    width: 100%;
-    height: auto;
-  }
+.header {
+  color: rgb(69, 100, 139);
+  position: relative;
+  margin-top: 100px;
+  left: 1%;
+}
 
-  li {
-    /* puts the list on a line */
-    display: inline;
-  }
+li {
+  display: inline;
+}
 
-  .nav {
-    /* makes the background 50% transparent */
-    background-color: rgba(255,255,255,0.5); 
-    /* width of the menu background */
-    width: 620px;
-  }
+.nav {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+}
 
-  .nav, a, li { 
-    /* removes the list dots */
-    list-style-type: none;
-    /* color for the menu links */
-    color:rgb(104, 149, 207);
-    /* text go from left to right */
-    text-align: left;
-    /* creates space between the menu links and increases height of the bar behind the menu */
-    padding: 15px 13px;
-    /* removes the lines under the links */
-    text-decoration: none;
-    /* font size on the menu links */
-    font-size: 17px;
-  }
+.nav,
+a,
+li {
+  list-style-type: none;
+  color: rgb(104, 149, 207);
+  padding: 7px 10px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  .nav, a:hover { 
-      /* on hover the menu links change color */
-    color:rgb(69, 100, 139);
-  }
+.nav,
+a:hover {
+  color: rgb(69, 100, 139);
+}
 
- .content, p {
-  /* width and height specified */
-     width: 550px;
-     height: 300px;
-     /* text color specified */
-     color:rgb(69, 100, 139);
-     /* text goes from left to right */
-     text-align: left;
-     /* space between content and border specified */
-     padding: 15px;
- }
+.content,
+p {
+  width: 43%;
+  color: rgb(90, 131, 184);
+  text-align: left;
+  margin-left: 1%;
+  width: 44%;
+  margin-top: 5%;
+}
 
- #btn {
-   /* makes the background color of the button transparent */
+small {
+  color: rgb(156, 190, 235);
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+#btn {
   background-color: Transparent;
-  /* no border */
   border: none;
-   /* make the cursor into a pointer when hovering over the button */
-  cursor:pointer;
-   /* makes the button text transparent */
+  cursor: pointer;
   color: transparent;
-   /* the position of the button is fixed, so that it stays in place even if the page is scrolled */
   position: fixed;
-   /* positioned on the fox's nose */
   left: 48%;
   top: 72%;
 }
-
