--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80)
     no-repeat center center fixed;
   background-size: cover;
-  width: 100%;
+  width: auto;
   height: auto;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -36,7 +36,7 @@ li {
 
 .nav,
 a:hover {
-  color: rgb(69, 100, 139);
+  color: rgb(69, 100, 140);
 }
 
 .content,
