--- a/style.css
+++ b/style.css
@@ -59,7 +59,19 @@ small {
   justify-content: left;
 }
 
-#btn {
+#closeBtn {
+  background-color: rgba(0, 0, 0, 0.806);
+  border: none;
+  color: white;
+  padding: 1% 1%;
+  margin: 0.5%;
+  font-size: 80%;
+  border-radius: 7%;
+  margin-left: 90%;
+  margin-top: 2%;
+}
+
+#boopFoxBtn {
   background-color: Transparent;
   border: none;
   cursor: pointer;
