--- a/style.css
+++ b/style.css
@@ -2,29 +2,16 @@ html {
   background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80)
     no-repeat center center fixed;
   background-size: cover;
-  width: auto;
-  height: auto;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.header, .subtitle {
+.header, .title, .subtitle {
   color: rgb(69, 100, 139);
-  position: relative;
-  margin-top: 100px;
-  left: 1%;
+  margin-top: 6%;
+  margin-left: 0.5%;
 }
 
-li {
-  display: inline;
-}
-
-.nav {
-  background-color: rgba(255, 255, 255, 0.5);
-  width: 100%;
-}
-
-.nav,
 a,
 li {
   list-style-type: none;
@@ -32,16 +19,15 @@ li {
   padding: 7px 10px;
   text-decoration: none;
   font-size: 17px;
+  display: inline;
 }
 
-.nav,
 a:hover {
   color: rgb(69, 100, 140);
 }
 
 .content,
 p {
-  width: 43%;
   color: rgb(90, 131, 184);
   text-align: left;
   margin-left: 1%;
