--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-html {
+.home {
   background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80)
     no-repeat center center fixed;
   background-size: cover;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.projects, .resume {
+  background-color: rgba(244,248,251,255)
 }
 
 .header, .title, .subtitle {
@@ -45,27 +49,27 @@ small {
   justify-content: left;
 }
 
-.intergalacticDatingGame, .didTrumpReallySayThatGame, .whatGameShouldYouTryOutNextQuiz {
-  margin-left: 0.7%;
-}
-
-.intergalacticDatingGame {
+.projectPictures{
   display: flex;
-  flex-direction:column;
-  justify-content: left;
+  flex-direction:row;
+  justify-content: center;
   margin-top: 3%;
 }
 
-.didTrumpReallySayThatGame {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
+.projectContent {
+  color: rgb(90, 131, 184);
+  text-align: left;
+  font-size: large;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 2%;
 }
 
-.whatGameShouldYouTryOutNextQuiz {
+.projectSubtitle, .projectTitle {
+  color: rgb(69, 100, 139);
+  margin-top: 6%;
   display: flex;
-  flex-direction:column;
-  justify-content: left;
+  justify-content: center;
 }
 
 #closeBtn {
