--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 .home {
   background: url(https://images.unsplash.com/photo-1603169812512-d6560fd13fa2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1600&q=80)
     no-repeat center center fixed;
