--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   width: 100%;
+  height: 100%;
 }
 
 .home {
@@ -102,8 +103,13 @@ small {
 .home{
   background: none;
   background-color: rgba(244,248,251,255)
+  margin-left
 }
-.small{
+.content{
+  width: 100%;
+  text-align: left;
+}
+small{
   display: none;
 }}
 
