--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ small {
   text-align: left;
 }
 small{
-  display: none;
+  visibility: hidden;
 }}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
