--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ small {
 .home{
   background: none;
   background-color: rgba(244,248,251,255)
-  margin-left
 }
 .content{
   width: 100%;
@@ -116,18 +115,42 @@ small{
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-
-} 
+  .content{
+    font-size: 23px;
+  }
+  .home{
+    background: none;
+    background-color: rgba(244,248,251,255)
+  }
+  .content{
+    width: 100%;
+    text-align: left;
+  }
+  small{
+    visibility: hidden;
+  }}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .content{
+    font-size: 25px;
+  }
+  .home{
+    background: none;
+    background-color: rgba(244,248,251,255)
+  }
+  .content{
+    width: 100%;
+    text-align: left;
+  }
+  small{
+    visibility: hidden;
+  }}
 
-} 
-
-/* Large devices (laptops/desktops, 992px and up) */
+/* Large devices (laptops/desktops, 992px and up) 
 @media only screen and (min-width: 992px) {
 
-} 
+} */
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
