--- a/style.css
+++ b/style.css
@@ -152,56 +152,29 @@ and (max-device-width : 480px) {
     visibility: hidden;
   }}
 
-/* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
 /* iPads (portrait and landscape) ----------- */
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) {
-/* Styles */
-}
-
-/* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
-/* Styles */
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
-}
+  .content{
+    font-size: 20px;
+  }
+  .home{
+    background: none;
+    background-color: rgba(244,248,251,255)
+  }
+  .content{
+    width: 100%;
+    text-align: left;
+  }
+  .links{
+    font-size: 35px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 90px;
+    grid-template-rows: 70px 70px;
+    grid-template-columns: 250px 250px;
+  }
+  small{
+    visibility: hidden;
+  }}
