--- a/style.css
+++ b/style.css
@@ -97,9 +97,8 @@ small {
 }
 
   /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media only screen and
+(max-device-width : 480px) {
 
   .content{
     font-size: 20px;
