--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@ small {
   justify-content: left;
 }
 
-.projectPictures{
+.projectPictures2, .projectPictures3, .projectPictures4{
   display: flex;
   flex-direction:row;
   justify-content: center;
   margin-top: 3%;
 }
 
-.projectContent {
+.projectContent{
   color: rgb(90, 131, 184);
   text-align: left;
   font-size: large;
@@ -96,6 +96,11 @@ small {
   top: 72%;
 }
 
+
+
+
+
+
   /* Smartphones (portrait and landscape) ----------- */
 @media screen and (max-width : 480px) {
 
@@ -120,7 +125,16 @@ small {
   }
   small{
     visibility: hidden;
+  }
+
+  .projectContent {
+    margin-left: 25%;
+    margin: 10%;
+    width: 100%;
+    font-size: large;
   }}
+
+
 
 /* iPads (portrait and landscape) ----------- */
 @media screen and (max-width : 1024px) {
@@ -145,4 +159,11 @@ small {
   }
   small{
     visibility: hidden;
-  }}
+  }
+  .projectContent {
+    margin: 10%;
+    width: 80%;
+    font-size: large;
+  }
+
+}
