--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ small {
   justify-content: left;
 }
 
+.projectPictures1 {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  margin-top: 3%;
+  margin-left: 25.5%;
+}
+
 .projectPictures2, .projectPictures3, .projectPictures4{
   display: flex;
   flex-direction:row;
