--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ small {
     margin-left: 25%;
     margin: 10%;
     width: 100%;
-    font-size: large;
+    font-size: xx-large;
   }}
 
 
@@ -166,7 +166,7 @@ small {
   .projectContent {
     margin: 10%;
     width: 80%;
-    font-size: large;
+    font-size:xx-large;
   }
 
 }
