--- a/style.css
+++ b/style.css
@@ -130,16 +130,14 @@ small {
     margin: 10%;
     width: 100%;
     font-size: xx-large;
+  }
+  #closeBtn {
+    size: 30%;
   }}
-
 
 
 /* iPads (portrait and landscape) ----------- */
 @media screen and (max-width : 1024px) {
-
-  .home {
-
-  }
 
   .content{
     font-size: 20px;
@@ -167,6 +165,9 @@ small {
     margin: 10%;
     width: 80%;
     font-size:xx-large;
+  }
+  #closeBtn {
+    size: 30%;
   }
 
 }
