--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ small {
     margin: 10%;
     width: 80%;
     font-size:xx-large;
+    color: rgb(69, 100, 139);
   }
   #closeBtn {
     size: 30%;
