--- a/style.css
+++ b/style.css
@@ -53,6 +53,13 @@ small {
   justify-content: left;
 }
 
+.projectPictures1{
+  display: flex;
+  flex-direction:row;
+  justify-content: center;
+  margin-top: 3%;
+}
+
 .projectPictures1, .projectPictures2, .projectPictures3, .projectPictures4{
   display: flex;
   flex-direction:row;
@@ -124,7 +131,12 @@ small {
   small{
     visibility: hidden;
   }
-
+  .projectPictures1{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    margin-top: 3%;
+  }
   .projectContent {
     margin-left: 25%;
     margin: 10%;
@@ -160,6 +172,12 @@ small {
   }
   small{
     visibility: hidden;
+  }
+  .projectPictures1{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    margin-top: 3%;
   }
   .projectContent {
     margin: 10%;
