--- a/style.css
+++ b/style.css
@@ -146,6 +146,12 @@ small {
   }
   #closeBtn {
     size: 30%;
+  }
+  #didTrumpActuallySayThatGame1, #didTrumpActuallySayThatGame3{
+    visibility: hidden;
+  }
+  #whatGameShouldYouTryOutNext1 {
+    visibility: hidden;
   }}
 
 
@@ -188,6 +194,13 @@ small {
   }
   #closeBtn {
     size: 30%;
+  }
+  #didTrumpActuallySayThatGame1, #didTrumpActuallySayThatGame3{
+    visibility: hidden;
+  }
+
+  #whatGameShouldYouTryOutNext1 {
+    visibility: hidden;
   }
 
 }
