--- a/style.css
+++ b/style.css
@@ -22,13 +22,16 @@ html {
 }
 
 a,
-li {
+.projectLanguages {
   list-style-type: none;
   color: rgb(104, 149, 207);
-  padding: 7px 10px;
   text-decoration: none;
   font-size: 17px;
-  display: inline;
+  display: flex;
+  flex-direction:row;
+  justify-content: left;
+  gap: 1%;
+  margin-left: 1%;
 }
 
 a:hover {
@@ -37,6 +40,7 @@ a:hover {
 
 .content,
 p {
+  white-space: pre-wrap;
   color: rgb(90, 131, 184);
   text-align: left;
   margin-left: 1%;
@@ -45,13 +49,23 @@ p {
 }
 
 small {
+  text-align: left;
   color: rgb(156, 190, 235);
+  margin-left: 1%;
+  width: 44%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;;
+  gap: 1%;
 }
 
 .links {
   display: flex;
   flex-direction: row;
   justify-content: left;
+  margin-top: 3%;
+  gap: 1.5%
 }
 
 .projectPictures1{
@@ -61,9 +75,10 @@ small {
   margin-top: 3%;
 }
 
-.projectPictures1, .projectPictures2, .projectPictures3, .projectPictures4{
+.projectPictures2, .projectPictures3, .projectPictures4{
   display: flex;
   flex-direction:row;
+  gap: 1%;
   justify-content: center;
   margin-top: 3%;
 }
@@ -93,6 +108,7 @@ small {
 }
 
 #boopFoxBtn {
+  white-space: pre-wrap;
   background-color: Transparent;
   border: none;
   cursor: pointer;
@@ -101,10 +117,6 @@ small {
   left: 48%;
   top: 72%;
 }
-
-
-
-
 
 
   /* Smartphones (portrait and landscape) ----------- */
