--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ small {
 
 .projectSubtitle,
 .projectTitle {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: rgb(69, 100, 139);
   margin-top: 6%;
   display: flex;
