--- a/style.css
+++ b/style.css
@@ -254,4 +254,12 @@ small {
     visibility: hidden;
   }
 
+  .projectPictures1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 3%;
+    margin-left: 6%;
+  }
+
 }
