--- a/style.css
+++ b/style.css
@@ -72,12 +72,22 @@ small {
   padding-bottom: 2%;
 }
 
-.links {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  margin-top: 3%;
-  gap: 1.5%
+.btn1,
+.btn2,
+.btn3,
+.btn4 {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 2px;
+  border-radius: 10%;
+  padding: 0.2% 1.3%;
+  margin: 50px 0;
+  margin-left: 1%;
+  color: rgba(244, 248, 251, 255);
+  text-decoration: none;
+  background: linear-gradient(90deg, #3182d9, #adebf5);
+  overflow: hidden;
 }
 
 .projectPictures1 {
