--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ small {
 .btn4 {
   display: inline-block;
   text-transform: uppercase;
-  font-size: 10px;
+  font-size: 61.5%;
   letter-spacing: 2px;
   border-radius: 10%;
   padding: 0.2% 1.3%;
