--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ small {
   border-radius: 10%;
   padding: 0.2% 1.3%;
   margin: 50px 0;
+  margin-top: 5%;
   margin-left: 1%;
   color: rgba(244, 248, 251, 255);
   text-decoration: none;
