--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ small {
 .btn1,
 .btn2,
 .btn3,
-.btn4 {
+.btn4,
+.btn5,
+.btn6 {
   display: inline-block;
   text-transform: uppercase;
   font-size: 61.5%;
@@ -89,6 +91,29 @@ small {
   text-decoration: none;
   background: linear-gradient(90deg, #3182d9, #adebf5);
   overflow: hidden;
+}
+
+.btn5,
+.btn6 {
+  display: flex;
+  width: 12%;
+  justify-content: right;
+  text-transform: uppercase;
+  font-size: 61.5%;
+  letter-spacing: 2px;
+  border-radius: 10%;
+  padding: 0.2% 1.3%;
+  margin: 50px 0;
+  margin-top: 5%;
+  margin-left: 1%;
+  color: rgba(244, 248, 251, 255);
+  text-decoration: none;
+  background: linear-gradient(90deg, #3182d9, #adebf5);
+  overflow: hidden;
+}
+
+.btn5 {
+  width: 10.5%
 }
 
 .projectPictures1 {
@@ -168,12 +193,14 @@ small {
   .btn1,
   .btn2,
   .btn3,
-  .btn4 {
+  .btn4,
+  .btn5,
+  .btn6 {
     font-size: 80%;
-    grid-auto-flow: column;
-    justify-content: center;
     grid-gap: 2%;
     width: 20%;
+    grid-auto-flow: column;
+    justify-content: center;
   }
 
   small {
@@ -233,12 +260,14 @@ small {
   .btn1,
   .btn2,
   .btn3,
-  .btn4 {
+  .btn4,
+  .btn5,
+  .btn6 {
     font-size: 80%;
-    grid-auto-flow: column;
-    justify-content: center;
     grid-gap: 2%;
     width: 20%;
+    grid-auto-flow: column;
+    justify-content: center;
   }
 
   small {
