--- a/style.css
+++ b/style.css
@@ -93,29 +93,6 @@ small {
   overflow: hidden;
 }
 
-.btn5,
-.btn6 {
-  display: flex;
-  width: 12%;
-  justify-content: right;
-  text-transform: uppercase;
-  font-size: 61.5%;
-  letter-spacing: 2px;
-  border-radius: 10%;
-  padding: 0.2% 1.3%;
-  margin: 50px 0;
-  margin-top: 5%;
-  margin-left: 1%;
-  color: rgba(244, 248, 251, 255);
-  text-decoration: none;
-  background: linear-gradient(90deg, #3182d9, #adebf5);
-  overflow: hidden;
-}
-
-.btn5 {
-  width: 10.5%
-}
-
 .projectPictures1 {
   display: flex;
   flex-direction: row;
@@ -196,11 +173,19 @@ small {
   .btn4,
   .btn5,
   .btn6 {
-    font-size: 80%;
-    grid-gap: 2%;
-    width: 20%;
-    grid-auto-flow: column;
-    justify-content: center;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 61.5%;
+    letter-spacing: 2px;
+    border-radius: 10%;
+    padding: 0.2% 1.3%;
+    margin: 50px 0;
+    margin-top: 5%;
+    margin-left: 1%;
+    color: rgba(244, 248, 251, 255);
+    text-decoration: none;
+    background: linear-gradient(90deg, #3182d9, #adebf5);
+    overflow: hidden;
   }
 
   small {
@@ -263,11 +248,19 @@ small {
   .btn4,
   .btn5,
   .btn6 {
-    font-size: 80%;
-    grid-gap: 2%;
-    width: 20%;
-    grid-auto-flow: column;
-    justify-content: center;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 61.5%;
+    letter-spacing: 2px;
+    border-radius: 10%;
+    padding: 0.2% 1.3%;
+    margin: 50px 0;
+    margin-top: 5%;
+    margin-left: 1%;
+    color: rgba(244, 248, 251, 255);
+    text-decoration: none;
+    background: linear-gradient(90deg, #3182d9, #adebf5);
+    overflow: hidden;
   }
 
   small {
