--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ small {
 
 .projectPictures2,
 .projectPictures3,
-.projectPictures4 {
+.projectPictures4,
+.projectPictures5 {
   display: flex;
   flex-direction: row;
   gap: 1%;
